<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/swipe_beranda"
    android:background="@drawable/bg2rev"
    android:verticalScrollbarPosition="right"
    tools:context=".Fragment.BerandaFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/txt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="15dp"
            android:text="@string/idDevice"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title_dataHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/sub_data"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/BlueFav"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/rl_row_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@drawable/lengkung_biru"
        app:layout_constraintTop_toBottomOf="@+id/title_dataHome"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/txt_debitHome"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/debit"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="NotSibling"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_toRightOf="@id/txt_debitHome"
                android:id="@+id/tv_debit"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:text="000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_tagihanHome"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_debitHome"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:text="@string/tagihan"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/tv_tagihan"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_tagihanHome"
                android:layout_below="@id/tv_debit"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="00"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

    </LinearLayout>

            <TextView
                android:id="@+id/txt_pilihTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sub_data"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/BlueFav"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/rl_row_home"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Pilih tanggal"
                android:id="@+id/label1"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/BlueFav"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_pilihTanggal"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <EditText
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_date_picker"
                android:layout_marginTop="10dp"
                android:hint="Pilih tanggal"
                android:focusable="false"
                app:layout_constraintStart_toEndOf="@id/label1"
                app:layout_constraintTop_toBottomOf="@+id/txt_pilihTanggal"
                android:layout_marginStart="16dp"
                android:textSize="12sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_date_picker"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bg_header_table"
            android:padding="10dp">

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:text="Tanggal"-->
<!--                android:textColor="@color/white"-->
<!--                android:textStyle="bold"/>-->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Tagihan"
                android:textColor="@color/white"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Kebocoran"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/rv_data_table"
                tools:listitem="@layout/item_table"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>